--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=${port:8080}
 
 #Database
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/Bank2
 
 spring.datasource.username=root
 
@@ -33,8 +33,7 @@ spring.jpa.properties.hibernate.hb2dll.auto = update
 
 logging.level.org.hibernate.SQL=DEBUG
 
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 
 server.error.whitelabel.enabled=false
 #server.error.path=/error
